# sip-smart-scan

./: .eslintrc.js  .replit  API_REFERENCE.md  App.tsx  BACKEND_ARCHITECTURE.md  DOCUMENTATION.md  FRONTEND_ARCHITECTURE.md  MOBILE_SETUP.md  README.md  SYSTEM_OVERVIEW.md  app.json  index.html  package-lock.json  package.json  package.json.backup  pyproject.toml  tailwind.config.ts  vite.config.ts
backend/: .env.example  main.py  start.py
backend/data/: drink_history.json  users.json
backend/models/: response_models.py  user_models.py
backend/services/: drink_history_service.py  health_tip_service.py  nutrition_service.py  user_service.py  vision_service.py
client/src/components/: CameraCapture.tsx  DailyCalorieStrip.tsx  DrinkHistoryItem.tsx  DrinkLogo.tsx  NutritionDisplay.tsx  SettingsItem.tsx  StatsCard.tsx
client/src/pages/: About.tsx  DailyGoals.tsx  (+5 more)
data/: drink_history.json  users.json
server/: storage.ts
src/: App.tsx
src/components/: BottomNavigation.tsx  CameraCapture.tsx  DailyCalorieStrip.tsx  DrinkHistoryItem.tsx  DrinkLogo.tsx  NutritionDisplay.tsx  SettingsItem.tsx
src/contexts/: DrinkContext.tsx
src/pages/: About.tsx  DailyGoals.tsx  HealthPreferences.tsx  History.tsx  Index.tsx  Notifications.tsx  Privacy.tsx  Settings.tsx
src/repl_nix_workspace.egg-info/: PKG-INFO  requires.txt  top_level.txt
src/screens/: AboutScreen.tsx  DrinkResultsScreen.tsx  HistoryScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx
src/services/: DrinkAnalysisService.ts  UserService.ts  drinkAnalysis.ts  localDatabase.ts  nutritionAPI.ts
src/types/: index.ts
(+4 files in other folders)
